@@ -157,6 +157,15 @@ public:
 	/// Returns a pointer to the nth Geometry int this collection
 	const Geometry* getGeometryN(std::size_t n) const override;
 
+	/**
+     * Creates a GeometryCollection with
+     * every component reversed.
+     * The order of the components in the collection are not reversed.
+     *
+     * @return a GeometryCollection in the reverse order
+     */
+	Geometry* reverse() const override;
+
 protected:
 
 	GeometryCollection(const GeometryCollection &gc);
